:sparkles: Finalizando pagina Sobre

--- a/wp-content/themes/webcar/css/header.css
+++ b/wp-content/themes/webcar/css/header.css
@@ -1,11 +1,6 @@
 header{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem 1rem;
+  padding:  1rem;
+  border-bottom: 1px solid #FFFFFF;
 }
 
 header a{
@@ -15,6 +10,14 @@ header a{
 header a img {
   width: 100%;
   object-fit: contain;
+}
+.menu-container{
+  max-width: 1280px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .menu{
